corrected media queries on small screens.

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 90%;
     margin: 20px auto;
     padding: 20px;
-    background-color: #dfdfdf;
+    background: linear-gradient(to bottom, #74f1f1, #ffffff);
     border-radius: 15px;
     box-shadow: 0 2px 5px rgba(2, 255, 234, 0.1);
 }
@@ -45,7 +45,7 @@ h1 {
 .phase {
     flex: 1 1 calc(30% - 30px);
     margin: 15px;
-    padding: 20px;
+    padding: 15px;
     background-color: #fff;
     border-radius: 10px;
     cursor: pointer;
@@ -65,7 +65,8 @@ h1 {
 }
 
 .phase:hover {
-    background-color: #f0f0f0;
+    background-color: #f5f5f5;
+    transform: scale(1.01); 
 }
 
 .phase h2 {
@@ -87,11 +88,6 @@ h1 {
 
 .subtasks.active li {
     display: block;
-    position: relative; /* Ensure positioning context for the tooltip */
-}
-
-.subtasks.active li:hover .data-tooltip {
-    display: block; /* Show tooltip on hover */
 }
 
 .subtasks {
@@ -103,19 +99,6 @@ h1 {
 
 .active .subtasks {
     display: block;
-}
-
-.data-tooltip {
-    display: none; /* Initially hidden */
-    position: absolute;
-    bottom: calc(100% + 5px); /* Position above the subtask */
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Center horizontally */
-    background-color: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 5px;
-    border-radius: 3px;
-    z-index: 1;
 }
 
 button {
@@ -164,14 +147,14 @@ button {
     padding: 10px;
 }
 
-/* Media queries for responsiveness */
+/* Media queries */
 @media screen and (max-width: 768px) {
     .container {
         max-width: 95%;
     }
 
     .phase {
-        flex: 1 1 calc(50% - 20px);
+        flex: 1 1 100%;
         margin-right: 0;
     }
 
